--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -9,6 +9,8 @@
 .cabecalho__menu-hamburguer{
     width: 24px;
     height: 24px;
+    margin-left: 1rem;
+    margin-right: 0.5rem;
     background-image: url("../img/Menu.svg");
     background-repeat: no-repeat;
     background-position: center;
@@ -21,15 +23,39 @@
 }
 
 .container__imagem{
-    padding: 1em;
+    padding: 0.5em;
 }
 
 .lista-menu{
     display: none;
     position: absolute;
     top: 100%;
+    width: 60vw;
+}
+
+.container__botao{
+    display: none;
 }
 
 .container__botao:checked~.lista-menu {
     display: block;
+}
+
+.lista-menu__titulo, .lista-menu__item{
+    padding: 1em;
+    background-color: var(--branco);
+}
+
+.lista-menu__titulo{
+    color: var(--laranja);
+    font-weight: 700;
+}
+
+.lista-menu__link{
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-decoration: none;
+    text-transform: uppercase;
 }
