--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -31,6 +31,24 @@
     font-weight: 400;
     text-align: center;
     color: var(--branco);
-    background: url("../src/img/Lupa.svg") no-repeat;
+    background: url("../img/Lupa.svg") no-repeat;
     background-position: 1em;
+}
+
+@media screen and (min-width: 1024px) {
+    .banner__titulo {
+        font-size: 36px;
+    }
+
+    .banner__pesquisa {
+        width: 55%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 7em;
+    }
+
+    .banner {
+        padding: 5em;
+    }
 }
