--- a/src/styles/carrossel.css
+++ b/src/styles/carrossel.css
@@ -21,3 +21,93 @@
     position: initial;
     margin: 0.5em 0;
 }
+
+.card{
+    border-radius: 10px;
+    background: var(--branco);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin: 1em;
+    padding: 1em;
+}
+
+.card__descricao{
+    display: flex;
+    justify-content: space-between;
+    margin: 0.5em 0;
+}
+
+.descricao{
+    margin-right: 1em;
+}
+
+.descricao__titulo{
+    color: var(--laranja);
+    font-family: var(--fonte-padrao);
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+.descricao__titulo-livro{
+    color: var(--azul);
+    font-family: var(--fonte-padrao);
+    font-size: 1.125rem;
+    font-weight: 700;
+    margin: 0.6em 0;
+}
+
+.descricao__texto{
+    font-family: var(--fonte-padrao);
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.card__botoes{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2em;
+}
+
+.botoes{
+    display: flex;
+}
+
+.botoes__item{
+    margin: 0 0.5em;
+}
+
+.botoes__ancora{
+    background-color: var(--laranja);
+    padding: 1em 2.2em;
+    color: var(--branco);
+    font-weight: 700;
+    text-decoration: none;
+}
+
+.descricao__estrelas{
+    margin-bottom: 0.5em;
+}
+
+@media screen and (min-width: 1024px) {
+    .carrossel__titulo {
+        font-size: 26px;
+    }
+
+    .swiper-pagination {
+        margin: 2em 0 3em 0;
+    }
+
+    .swiper {
+        width: 60%;
+    }
+
+    .swiper-button-prev,
+    .swiper-button-next {
+        display: block;
+        top: 60%;
+    }
+
+    .card {
+        width: 40%;
+        margin: 2.5em auto;
+    }
+}
