--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,19 @@
 @import url("src/styles/header.css");
 @import url("src/styles/banner.css");
 @import url("src/styles/carrossel.css");
+@import url("src/styles/topicos.css");
+@import url("src/styles/contato.css");
+@import url("src/styles/rodape.css");
 
 :root{
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
     --laranja: #EB9B00;
+    --azul: #002F52;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-principal: 'Poppins', sans-serif;
+    --fonte-secundaria: 'Josefin Sans';
+    --preto: #000;
 }
 
 body{
