--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@
     --fonte-principal: 'Poppins', sans-serif;
     --fonte-secundaria: 'Josefin Sans';
     --preto: #000;
+    --cinza: #474646;
+    --cinza-claro: #858585;
 }
 
 body{
