--- a/src/styles/topicos.css
+++ b/src/styles/topicos.css
@@ -43,3 +43,9 @@
         padding: 2em 1em;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .topicos {
+        padding: 2em 25vw;
+    }
+}
